# hipDF

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  VERSION  build.sh  build_hip.sh  fetch_rapids.cmake  install_hipdf.sh  overrides.cmake  print_env.sh  rapids_config.cmake  versions.json
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt
cpp/benchmarks/common/: generate_input.cu  generate_input.hip  generate_input.hpp  random_distribution_factory.cuh
cpp/benchmarks/copying/: shift.cu  shift.hip
cpp/benchmarks/io/: cuio_common.cpp
cpp/benchmarks/iterator/: iterator.cu  iterator.hip
cpp/benchmarks/join/: generate_input_tables.cuh  join_common.hpp
cpp/benchmarks/json/: json.cu
cpp/benchmarks/misc/: run_benchmarks.sh
cpp/benchmarks/stream_compaction/: apply_boolean_mask.cpp
cpp/benchmarks/string/: char_types.cpp  extract.cpp  factory.cu  json.cu  json.hip
cpp/benchmarks/synchronization/: synchronization.cpp  synchronization.hpp
cpp/benchmarks/text/: ngrams.cpp  tokenize.cpp
cpp/benchmarks/type_dispatcher/: type_dispatcher.cu  type_dispatcher.hip
cpp/cmake/Modules/: ConfigureCUDA.cmake  ConfigureHIP.cmake  JitifyPreprocessKernels.cmake  JitifyPreprocessKernelsHIP.cmake
cpp/doxygen/: Doxyfile
cpp/doxygen/developer_guide/: DEVELOPER_GUIDE.md
cpp/examples/: build.sh  fetch_dependencies.cmake  run_examples.sh  set_cuda_architecture.cmake  versions.cmake
cpp/examples/basic/: CMakeLists.txt
cpp/examples/billion_rows/: CMakeLists.txt
cpp/examples/interop/: CMakeLists.txt
cpp/examples/nested_types/: CMakeLists.txt
cpp/examples/parquet_io/: CMakeLists.txt  parquet_io.cpp
cpp/examples/strings/: CMakeLists.txt  custom_optimized.cu  custom_optimized.hip  custom_prealloc.cu  custom_with_malloc.cu  libcudf_apis.cpp
cpp/include/cudf/: aggregation.hpp  contiguous_split.hpp  cuda_runtime.h  cuda_runtime_api.h  groupby.hpp  interop.hpp  jit_amd_utilities.hpp  nvcomp.h  rolling.hpp  sorting.hpp  types.hpp
cpp/include/cudf_test/: base_fixture.hpp  column_utilities.hpp  column_wrapper.hpp  jit_amd_utilities.hpp  stream_checking_resource_adaptor.hpp  timestamp_utilities.cuh  type_lists.hpp
cpp/include/nvtext/: edit_distance.hpp  generate_ngrams.hpp  ngrams_tokenize.hpp  subword_tokenize.hpp  tokenize.hpp
cpp/include/thrust/: optional.h
cpp/libcudf_kafka/: CMakeLists.txt
cpp/src/aggregation/: aggregation.cpp
cpp/src/ast/: operators.cpp
cpp/src/binaryop/: binaryop.cpp
cpp/src/bitmask/: is_element_valid.cpp  null_mask.cu  null_mask.hip
cpp/src/column/: column.cu  column.hip  column_device_view.cu  column_device_view.hip  column_factories.cu  column_factories.hip
cpp/src/copying/: concatenate.cu  concatenate.hip  contiguous_split.cu  contiguous_split.hip  copy.cpp  gather.cu  gather.hip
cpp/src/datetime/: datetime_ops.cu  datetime_ops.hip  timezone.cpp
cpp/src/dictionary/: add_keys.cu  decode.cu  dictionary_factories.cu  dictionary_factories.hip  encode.cu  remove_keys.cu  remove_keys.hip  search.cu  search.hip  set_keys.cu
cpp/src/groupby/: groupby.cu
cpp/src/hash/: concurrent_unordered_map.cuh  helper_functions.cuh  managed.cuh  spark_murmurhash3_x86_32.cu  spark_murmurhash3_x86_32.hip  unordered_multiset.cuh  xxhash_64.hip
cpp/src/interop/: dlpack.cpp  from_arrow.cu  from_arrow.hip  to_arrow.cu  to_arrow.hip  to_arrow_host.cu
cpp/src/io/: functions.cpp
cpp/src/jit/: cache.cpp  parser.cpp  parser.hpp
cpp/src/join/: conditional_join_kernels.cuh  distinct_hash_join.cu  hash_join.cu  hash_join.hip  join.cu  join_common_utils.cuh  join_common_utils.hpp  join_utils.cu  join_utils.hip  mixed_join.cu  mixed_join.hip  mixed_join_common_utils.cuh  mixed_join_kernel.cuh  mixed_join_kernels_semi.cu  mixed_join_kernels_semi.hip  mixed_join_semi.cu  mixed_join_semi.hip  mixed_join_size_kernel.cuh  mixed_join_size_kernel.hpp  mixed_join_size_kernels_semi.cu  mixed_join_size_kernels_semi.hip
cpp/src/json/: json_path.cu
cpp/src/lists/: contains.cu  count_elements.cu  dremel.hip  segmented_sort.cu
cpp/src/merge/: merge.cu  merge.hip
cpp/src/partitioning/: partitioning.cu  partitioning.hip
cpp/src/quantiles/: quantiles_util.hpp
cpp/src/reductions/: all.cu  all.hip  any.cu  any.hip  histogram.cu  minmax.cu  minmax.hip  nth_element.cu  nth_element.hip  reductions.cpp
cpp/src/replace/: clamp.cu  nulls.cu  nulls.hip  replace.cu  replace.hip
cpp/src/rolling/: grouped_rolling.cu  rolling.cu
cpp/src/round/: round.cu  round.hip
cpp/src/scalar/: scalar.cpp  scalar_factories.cpp
cpp/src/search/: contains_table.cu  contains_table.hip  search_ordered.cu
cpp/src/sort/: is_sorted.cu  rank.cu  rank.hip  segmented_sort.cu  segmented_sort_impl.cuh  sort.cu  sort_impl.cuh  stable_segmented_sort.cu  stable_sort.cu  stable_sort_column.hip
cpp/src/stream_compaction/: distinct.cu  distinct.hip  distinct_count.cu  distinct_count.hip  distinct_reduce.hip  stream_compaction_common.cuh  stream_compaction_common.hpp
cpp/src/strings/: attributes.cu  attributes.hip  capitalize.cu  case.cu  case.hip  repeat_strings.hip  slice.cu  strings_column_factories.cu  strings_column_factories.hip  utilities.cu  utilities.hip
cpp/src/text/: edit_distance.cu  edit_distance.hip  generate_ngrams.cu  jaccard.cu  jaccard.hip  minhash.cu  minhash.hip  ngrams_tokenize.cu  ngrams_tokenize.hip  normalize.cu  replace.cu  tokenize.cu  vocabulary_tokenize.cu  vocabulary_tokenize.hip
cpp/src/transform/: compute_column.cu  nans_to_nulls.cu  nans_to_nulls.hip  row_bit_count.hip  transform.cpp
cpp/src/unary/: cast_ops.cu  cast_ops.hip  math_ops.cu
cpp/src/utilities/: cuda.cpp  default_stream.cpp  jit_amd_utilities.cpp  stream_pool.cpp  traits.cpp  type_dispatcher.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/binaryop/: assert-binops.h  binop-compiled-fixed_point-test.cpp  binop-compiled-test.cpp  binop-generic-ptx-test.cpp
cpp/tests/bitmask/: bitmask_tests.cpp  valid_if_tests.cu  (+1 more)
python/cudf/: CMakeLists.txt  pyproject.toml  setup.py
python/libcudf/: CMakeLists.txt  pyproject.toml
(+3328 files in other folders)
